[Qt] Buildfix for newer Qt5 https://bugs.webkit.org/show_bug.cgi?id=90519

Reviewed by Tor Arne Vestbø.

Source/WebKit/qt:

* WebCoreSupport/QtFallbackWebPopup.cpp: Include QtGui/QStandardItemModel instead of deprecated QStandardItemModel.

Source/WebKit2:

* UIProcess/API/qt/qwebkittest.cpp: Include qpa/qwindowsysteminterface.h instead of deprecated qwindowsysteminterface_qpa.h.

Tools:

* MiniBrowser/qt/MiniBrowser.pro: We also need to depend on gui-private in the MiniBrowser to get access to these headers.
* MiniBrowser/qt/MiniBrowserApplication.h: Include qpa/qwindowsysteminterface.h instead of deprecated qwindowsysteminterface_qpa.h
* WebKitTestRunner/qt/PlatformWebViewQt.cpp: Include qpa/qwindowsysteminterface.h instead of deprecated qwindowsysteminterface_qpa.h

Canonical link: https://commits.webkit.org/108525@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121967 268f45cc-cd09-0410-ab3c-d52691b4dbfc